# genai-standard-case

./: README.md  pyproject.toml
app/: main.py
app/html/: index.html  result.html
app/model/: Project.py
data/noter_og_dokumenter/: budgetforslag.xlsx  email_fra_styrelsen.txt  moede_20032024.txt  projektforslag.docx
data/skabelon/: skabelon.md
