[project]
name = "genai-standard-case"
version = "0.1.0"
description = "Simpel genai standard case."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "markdown>=3.7",
    "pydantic>=2.11.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]
